--- a/css/mainStyle.css
+++ b/css/mainStyle.css
@@ -37,8 +37,15 @@ body{
 .banner .start{
     text-align: center;
 }
-.banner .start h1{
+.banner .start a{
+    color: #aaa;
     text-align: center;
-    font-size: xx-large;
+    font-size: 2rem;
     border: solid 4px #aaa;
+}
+.banner .start a:hover{
+    color: #fff;
+    text-align: center;
+    font-size: 2.05rem;
+    border: solid 4px #fff;
 }
