--- a/css/mainStyle.css
+++ b/css/mainStyle.css
@@ -7,7 +7,6 @@ body{
 }
 
 .banner{
-    padding:0;
     height: 100vh;
     width:100%; 
     background:url("../images/overlay.png"),url('../images/mountain.jpg');
@@ -51,8 +50,15 @@ body{
     border: solid 4px #fff;
 }
 footer{
+    padding:0 !important;
+    margin:0 !important;
+    text-align: center;
+}
+footer p{
+    font-size: .7rem;
+    margin:0;
+    position: right;
+    padding:10px;
+    color: #aaa;
     
-    height:30px;
-    width:100%;
-    background:#999;
 }
